# FIT-BIT-IFJ-2019-project

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  rozdeleni  rozsireni
docs/: Lexical_Analysis.drawio  Makefile  dokumentace.tex  prezentace.tex
src/: CMakeLists.txt  Makefile  dynamic_array.c  dynamic_array.h  dynamic_string.c  dynamic_string.h  dynamic_string_list.c  dynamic_string_list.h  error.h  inter_code_generator.c  inter_code_generator.h  main.c  node_dynamic_list.c  node_dynamic_list.h  parse_tree.c  parse_tree.h  parser.c  parser.h  scanner.c  scanner.h  semantic_analysis.c  semantic_analysis.h  stack.c  stack.h  symtable.c  symtable.h  token_stack.c  token_stack.h  tree_element_stack.c  tree_element_stack.h
tests/: CMakeLists.txt  dynamic_string.cpp  dynamic_string_list.cpp  example.cpp  scanner.cpp  stack.cpp  symtable.cpp  tester.sh
tests/data/: binInt.ifj19  errIndentation.ifj19  errToken.ifj19  escapeSeq.ifj19  example1.ifj19  float_dot.ifj19  float_dot2.ifj19  float_e.ifj19  float_e2.ifj19  hexInt.ifj19  octInt.ifj19
tests/data/Equal/: code.ifj19
tests/data/addBoolInt/: code.ifj19
tests/data/addFloatInt/: code.ifj19
tests/data/addMultFloatInt/: code.ifj19
tests/data/addMultInt/: code.ifj19
tests/data/addSubInt/: code.ifj19
tests/data/addSubMultDiv/: code.ifj19
tests/data/addSubMultDivBracketsFloat/: code.ifj19
tests/data/addSubMultDivBracketsInt/: code.ifj19
tests/data/addSubMultDivBracketsInt1/: code.ifj19
tests/data/aritOpsFloatVar/: code.ifj19
tests/data/aritOpsIntFloatBool/: code.ifj19  stdout
tests/data/aritOpsIntVar/: code.ifj19  stdout
tests/data/aritOpsMixTypesVar/: code.ifj19
tests/data/divMultInt/: code.ifj19  stdout
tests/data/docString1/: code.ifj19
tests/data/errAddBoolString/: code.ifj19
tests/data/errBadBinary/: code.ifj19
tests/data/errBadDecimal/: code.ifj19
tests/data/errBadFloat/: code.ifj19
tests/data/errBadHexadecimal/: code.ifj19
tests/data/errBadOctal/: code.ifj19
tests/data/errBadString1/: code.ifj19
tests/data/errBadString2/: code.ifj19
tests/data/errBadString3/: code.ifj19
tests/data/errDivZero/: code.ifj19
tests/data/errFunctionBadArgc/: code.ifj19
tests/data/errFunctionVariableSymbolCollision/: code.ifj19
tests/data/errIndentation1/: code.ifj19
tests/data/errIndentation2/: code.ifj19
tests/data/errIndentation3/: code.ifj19
tests/data/errIntDivZero/: code.ifj19
tests/data/errLocalGlobalSymbolCollision/: code.ifj19
tests/data/errSemanticStringMinus/: code.ifj19
tests/data/escapeSeq/: stdout
tests/data/example1/: code.ifj19  stdout
tests/data/example2/: stdout
tests/data/greater/: code.ifj19
tests/data/greaterAddInt/: code.ifj19
tests/data/greaterEqual/: code.ifj19
tests/data/ifElse1/: code.ifj19
tests/data/ifElseFalse1/: code.ifj19
tests/data/ifElseFalse2/: code.ifj19
tests/data/ifElseTrue1/: code.ifj19
tests/data/ifElseTrue2/: code.ifj19
tests/data/ifElseTrue3/: code.ifj19
tests/data/ifElseTrue4/: code.ifj19
tests/data/ifElseTrue5/: code.ifj19
tests/data/ifElseTrue6/: code.ifj19
tests/data/ifNot1/: code.ifj19
tests/data/ifNot2/: code.ifj19
tests/data/ifNotElse1/: code.ifj19
tests/data/ifNotElse2/: code.ifj19
tests/data/ifTrue1/: code.ifj19
tests/data/ifTrue2/: code.ifj19
tests/data/ifTrue3/: code.ifj19
tests/data/ifTrue4/: code.ifj19
tests/data/ifTrue5/: code.ifj19
tests/data/ifTrue6/: code.ifj19
tests/data/longId/: code.ifj19
tests/data/lower/: code.ifj19
tests/data/lowerEqual/: code.ifj19
tests/data/lowerSubInt/: code.ifj19
tests/data/mixedIndentation/: code.ifj19
tests/data/notEqual/: code.ifj19
tests/data/printInputf/: code.ifj19  stdout
tests/data/printInputi/: code.ifj19
tests/data/printInputs/: code.ifj19
tests/data/printNone/: code.ifj19
tests/data/printPrint/: code.ifj19  stdout
tests/data/printVariableFloat/: code.ifj19
tests/data/printVariableNone/: code.ifj19
tests/data/printVariableString/: code.ifj19
tests/data/relop/: code.ifj19
tests/data/strLen/: code.ifj19
tests/data/subBoolFloat/: code.ifj19  stdout
tests/data/subDivFloatInt/: code.ifj19  stdout
tests/data/subDivInt/: code.ifj19
tests/data/whileFalse1/: code.ifj19
tests/data/whileFalse2/: code.ifj19
tests/data/whileNotTrue1/: code.ifj19
tests/data/whileNotTrue2/: code.ifj19
